--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/default/documentation.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/default/documentation.html.twig
@@ -10,6 +10,6 @@
 
 {% block body %}
 
-    {{ 'ems.documentation.body'|i18n|generate_from_template|raw }}
+    {{ 'ems.documentation.body'|emsco_i18n|emsco_generate_from_template|raw }}
 
 {% endblock %}
