--- a/EMS/core-bundle/src/Resources/views/notification/sent.html.twig
+++ b/EMS/core-bundle/src/Resources/views/notification/sent.html.twig
@@ -16,7 +16,7 @@
 		</div>
 		<!-- /.box-header -->
 		<div class="box-body ">
-		
+
 		{% if notifications|length <= 0  %}
 		<p>{{ 'No result to display'|trans }}: <a href="{{ path('notifications.sent') }}">{{ 'reset filters' }}</a></p>
 		{% else %}
@@ -39,9 +39,9 @@
 								<tr>
 									<td class="" nowrap="nowrap">
 										<i class="{{notification.template.icon}}"></i> {{ notification.template.label }}
-										
+
 									</td>
-									<td>{{ notification.username|displayname }}</td>
+									<td>{{ notification.username|emsco_display_name }}</td>
 									<td>{{ notification.created|date|date(date_time_format) }}</td>
 									<td>
 										<span class="badge bg-{{ notification.environment.color|raw }}">{{ notification.environment.name }}</span>
@@ -65,8 +65,8 @@
 									&nbsp;
 									</td>
 									<td>
-										{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|data_link(notification.revision.id)|raw }}
-				
+										{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|emsco_data_link(notification.revision.id)|raw }}
+
 									<td>
 										<div class="btn-group">
 											{% if is_granted(notification.template.role) %}
@@ -94,7 +94,7 @@
 			{% endif %}
 		</div>
 	</div>
-	
+
 {% else %}
           <div class="box box-default">
             <div class="box-header with-border">
