--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search.html.twig
@@ -42,7 +42,7 @@
 
 									{% set resultLabel = result|emsco_display %}
 									{{ resultLabel }}
-									{% if resultLabel != result.id or is_super() %}<small>({{ result.id }})</small>{% endif %}
+									{% if resultLabel != result.id or emsco_is_super() %}<small>({{ result.id }})</small>{% endif %}
 			  		</span>
 							{% else %}
 								<i class="fa fa-question"></i>
@@ -60,7 +60,7 @@
 						{% if attribute(types, result.contentType) is defined and attribute(types, result.contentType).indexTwig %}
 							<div class="card-body">
 								<div class="col-12">
-									{{ attribute(types, result.contentType).indexTwig|generate_from_template({
+									{{ attribute(types, result.contentType).indexTwig|emsco_generate_from_template({
 										environment: attribute(indexes, result.index),
 										contentType: attribute(types, result.contentType),
 										object: result,
@@ -144,7 +144,7 @@
 						<h3 class="card-title"><i class="fa fa-filter"></i> {{ option.name }}</h3>
 					</div>
 					<div class="card-body">
-						{{ option.template|generate_from_template({
+						{{ option.template|emsco_generate_from_template({
 							'option': option,
 							'id': id,
 							'aggregation': response.getAggregation('agg_'~id).raw,
