--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxToTreat.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inboxToTreat.html.twig
@@ -28,7 +28,7 @@
 							&nbsp;&nbsp;&nbsp;<i class="{{notification.template.icon}}"></i> {{ notification.template.label }}
 						</label>
 					</td>
-					<td>{{ notification.username|displayname }}</td>
+					<td>{{ notification.username|emsco_display_name }}</td>
 					<td>{{ notification.created|date|date(date_time_format) }}</td>
 					<td>
 						<span class="badge bg-{{ notification.environment.color|raw }}">{{ notification.environment.name }}</span>
@@ -52,7 +52,7 @@
 					&nbsp;
 					</td>
 					<td>
-						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|data_link(notification.revision.id)|raw }}
+						{{ (notification.revision.contentType.name~':'~notification.revision.ouuid)|emsco_data_link(notification.revision.id)|raw }}
 
 					<td>
 						<div class="btn-group">
