--- a/EMS/core-bundle/src/Resources/views/data/trash.html.twig
+++ b/EMS/core-bundle/src/Resources/views/data/trash.html.twig
@@ -1,7 +1,7 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %}
-{% block pagetitle %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %} 
+{% block pagetitle %}{{ 'Trash for content type %name%'|trans({'%name%': contentType.singularName}) }}{% endblock %}
 
 
 {% block body %}
@@ -21,7 +21,7 @@
 					<tbody>
 						<tr>
 							<th class="text-center" style="width: 10px">{{ '#'|trans }}</th>
-                            {% if is_super() %}<th>{{ 'OUUID'|trans }}</th>{% endif %}
+                            {% if emsco_is_super() %}<th>{{ 'OUUID'|trans }}</th>{% endif %}
 							<th>{{ 'Label'|trans }}</th>
 							<th>{{ 'Deleted by'|trans }}</th>
 							<th>{{ 'Last update'|trans }}</th>
@@ -30,20 +30,20 @@
 						{% for revision in revisions %}
 							<tr>
 								<td class="text-center">{{ loop.index }}.</td>
-                                {% if is_super() %}<td>{{ revision.ouuid }}</td>{% endif %}
+                                {% if emsco_is_super() %}<td>{{ revision.ouuid }}</td>{% endif %}
 								<td>
 								{% if revision.contentType.labelField is defined and revision.rawData and attribute(revision.rawData, revision.contentType.labelField) is defined %}
 									{{ attribute(revision.rawData, revision.contentType.labelField) }}
 								{% endif %}
 								</td>
 								<td>
-									{{ revision.deletedBy|default('N/A')|displayname }}
+									{{ revision.deletedBy|default('N/A')|emsco_display_name }}
 								</td>
 								<td>
 									{{ revision.modified|date(date_time_format) }}
 								</td>
 								<td>
-								
+
 									<div class="btn-group">
                                         {% include '@EMSCore/elements/post-button.html.twig' with {
 											'url': path('ems_data_put_back', {
@@ -64,8 +64,8 @@
 											'icon': 'trash'
 										}%}
 				                    </div>
-								
-              
+
+
 								</td>
 							</tr>
 						{% endfor %}
@@ -87,4 +87,4 @@
 {% include '@EMSCore/app/menu.html.twig' with {
 	'item':  'data-draft-' ~ contentType.id
 }%}
-{% endblock %}	
+{% endblock %}
