--- a/EMS/core-bundle/src/Resources/views/elasticsearch/search.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elasticsearch/search.html.twig
@@ -44,7 +44,7 @@
 
 						{% set resultLabel = result|emsco_display %}
 						{{ resultLabel }}
-						{% if resultLabel != result.id or is_super()  %}<small>({{ result.id }})</small>{% endif %}
+						{% if resultLabel != result.id or emsco_is_super()  %}<small>({{ result.id }})</small>{% endif %}
 			  		</span>
 			  	{% else %}
 				  	<i class="fa fa-question"></i>
@@ -63,7 +63,7 @@
 			  		<div class="panel-body">
 					  	<div class="col-xs-12">
 					  		{{
-								attribute(types, result.contentType).indexTwig|generate_from_template({
+								attribute(types, result.contentType).indexTwig|emsco_generate_from_template({
 									environment: attribute(indexes, result.index),
 									contentType: attribute(types, result.contentType),
 									object: result,
@@ -150,7 +150,7 @@
             			<h3 class="box-title"><i class="fa fa-filter"></i> {{ option.name }}</h3>
             		</div>
             		<div class="box-body">
-        				{{ option.template|generate_from_template({
+        				{{ option.template|emsco_generate_from_template({
         				    'option': option,
         				    'id': id,
         				    'aggregation': response.getAggregation('agg_'~id).raw,
