--- a/EMS/core-bundle/src/Resources/views/user/profile/show.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/profile/show.html.twig
@@ -11,7 +11,7 @@
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <a href="https://www.gravatar.com/emails" target="_blank">
-                        <img class="profile-user-img img-responsive img-circle" src="https://www.gravatar.com/avatar/{{ app.user.email|lower|md5 }}?d={{ "https://www.gravatar.com/avatar"|url_encode }}" alt="{{ 'view.profile.show.alt.user_profile_picture'|trans }}">
+                        <img class="profile-user-img img-responsive img-circle" src="https://www.gravatar.com/avatar/{{ app.user.email|lower|ems_md5 }}?d={{ "https://www.gravatar.com/avatar"|url_encode }}" alt="{{ 'view.profile.show.alt.user_profile_picture'|trans }}">
                     </a>
                     <h3 class="profile-username text-center">{{ user.displayName }}</h3>
                     <p class="text-muted text-center">{{ user.username }}</p>
@@ -42,7 +42,7 @@
                                 <b>{{ circles_object|get_content_type.pluralName }} : </b>
                                 <i class="">
                                     {% for circle in user.circles  -%}
-                                        <span class="badge text-nowrap">{{- circle|data_label|raw -}}</span>&nbsp;
+                                        <span class="badge text-nowrap">{{- circle|emsco_display|raw -}}</span>&nbsp;
                                     {%- endfor %}
                                 </i>
                             </li>
