fix: missing breadcrumb-item classes

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/contenttype/reorder.html.twig
@@ -5,9 +5,9 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
-		<li><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
-   		<li class="active">{{ 'Reorder'|trans }}</li>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.index") }}"><i class="fa fa-cubes"></i> Content Types</a></li>
+		<li class="breadcrumb-item"><a href="{{ path("contenttype.edit", {id: contentType.id}) }}"><i class="{{ contentType.icon }}"></i> Edit {{ contentType.singularName }}</a></li>
+   		<li class="breadcrumb-item active">{{ 'Reorder'|trans }}</li>
    	</ol>
 {% endblock %}
 
