--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/edit.html.twig
@@ -4,9 +4,9 @@
 {% block pagetitle %}{{ block('title') }}{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-database"></i> {{ 'environment.plural'|trans }}</li>
-		<li><a href={{ path('environment.index') }}>{{ 'environment.index.title'|trans }}</a></li>
-   		<li class="active">{{ 'environment.edit.short_title'|trans }}</li>
+		<li class="breadcrumb-item"><i class="fa fa-database"></i> {{ 'environment.plural'|trans }}</li>
+		<li class="breadcrumb-item"><a href={{ path('environment.index') }}>{{ 'environment.index.title'|trans }}</a></li>
+   		<li class="breadcrumb-item active">{{ 'environment.edit.short_title'|trans }}</li>
    	</ol>
 {% endblock %}
 
