--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/rebuild.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/rebuild.html.twig
@@ -4,9 +4,9 @@
 {% block pagetitle %}Rebuild the environment {{environment.name}}{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-database"></i> Environments</li>
-		<li><a href={{ path('environment.index') }}>List Environments</a></li>
-   		<li class="active">Rebuild index</li>
+		<li class="breadcrumb-item"><i class="fa fa-database"></i> Environments</li>
+		<li class="breadcrumb-item"><a href={{ path('environment.index') }}>List Environments</a></li>
+   		<li class="breadcrumb-item active">Rebuild index</li>
    	</ol>
 {% endblock %}
 
