--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/index.html.twig
@@ -7,8 +7,8 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_analyzer_index') }}"><i class="fa fa-filter"></i> {{ 'Filters'|trans }}</a></li>
-		<li>{{ 'List filters'|trans }}</li>
+		<li class="breadcrumb-item"><a href="{{ path('ems_analyzer_index') }}"><i class="fa fa-filter"></i> {{ 'Filters'|trans }}</a></li>
+		<li class="breadcrumb-item">{{ 'List filters'|trans }}</li>
    	</ol>
 {% endblock %}
 
