--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-language"></i> {{ 'WYSIWYG options'|trans }}</li>
+		<li class="breadcrumb-item"><i class="fa fa-language"></i> {{ 'WYSIWYG options'|trans }}</li>
    	</ol>
 {% endblock %}
 
