--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/edit.html.twig
@@ -6,8 +6,8 @@
 {% block subtitle %}<small>{{ 'expert mode'|trans }}</small>{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_filter_index') }}"><i class="fa fa-filter"></i> {{ 'Filters'|trans }}</a></li>
-		<li>{{ 'Edit a Filter'|trans }}</li>
+		<li class="breadcrumb-item"><a href="{{ path('ems_filter_index') }}"><i class="fa fa-filter"></i> {{ 'Filters'|trans }}</a></li>
+		<li class="breadcrumb-item">{{ 'Edit a Filter'|trans }}</li>
    	</ol>
 {% endblock %}
 
