--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form-submission/form-submission.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form-submission/form-submission.html.twig
@@ -8,7 +8,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li class="active">{{ block('title') }}</li>
+        <li class="breadcrumb-item active">{{ block('title') }}</li>
     </ol>
 {% endblock %}
 
