--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
@@ -5,8 +5,8 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('i18n_index') }}"><i class="fa fa-language"></i> {{ 'I18N'|trans }}</a></li>
-   		<li class="active">{{ 'I18N edit'|trans }} </li>
+		<li class="breadcrumb-item"><a href="{{ path('i18n_index') }}"><i class="fa fa-language"></i> {{ 'I18N'|trans }}</a></li>
+   		<li class="breadcrumb-item active">{{ 'I18N edit'|trans }} </li>
    	</ol>
 {% endblock %}
 
