--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/query-search/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/query-search/form.html.twig
@@ -3,8 +3,8 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_core_query_search_index') }}"><i class="{{ 'view.icon.class.query_search'|trans }}"></i> {{ 'query_search.menu'|trans }}</a></li>
-		<li>{{ block('title') }}</li>
+		<li class="breadcrumb-item"><a href="{{ path('ems_core_query_search_index') }}"><i class="{{ 'view.icon.class.query_search'|trans }}"></i> {{ 'query_search.menu'|trans }}</a></li>
+		<li class="breadcrumb-item">{{ block('title') }}</li>
    	</ol>
 {% endblock %}
 
