--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add-to-release.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add-to-release.html.twig
@@ -6,8 +6,8 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path('emsco_view_revisions', {type: revision.contentType.name, ouuid: revision.ouuid, revisionId: revision.id}) }}"><i class="{{ revision.contentType.icon|default('fa fa-book') }}"></i> {{ revision.label }}</a></li>
-        <li>{{ block('title') }}</li>
+        <li class="breadcrumb-item"><a href="{{ path('emsco_view_revisions', {type: revision.contentType.name, ouuid: revision.ouuid, revisionId: revision.id}) }}"><i class="{{ revision.contentType.icon|default('fa fa-book') }}"></i> {{ revision.label }}</a></li>
+        <li class="breadcrumb-item">{{ block('title') }}</li>
     </ol>
 {% endblock %}
 
