--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/schedule/abstract.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/schedule/abstract.html.twig
@@ -3,8 +3,8 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><a href="{{ path('job.index') }}"><i class="{{ 'job.icon.class'|trans }}"></i> {{ 'job.menu'|trans }}</a></li>
-        <li><a href="{{ path('emsco_schedule_index') }}"><i class="{{ 'schedule.icon.class'|trans }}"></i> {{ 'schedule.list.menu'|trans }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('job.index') }}"><i class="{{ 'job.icon.class'|trans }}"></i> {{ 'job.menu'|trans }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('emsco_schedule_index') }}"><i class="{{ 'schedule.icon.class'|trans }}"></i> {{ 'schedule.list.menu'|trans }}</a></li>
         {% block breadcrumb_items %}{% endblock breadcrumb_items %}
     </ol>
 {% endblock %}
