--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/search-options/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/search-options/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><i class="fa fa-search"></i> {{ 'Search options'|trans }}</li>
+		<li class="breadcrumb-item"><i class="fa fa-search"></i> {{ 'Search options'|trans }}</li>
    	</ol>
 {% endblock %}
 
