--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/uploaded-file-logs/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/uploaded-file-logs/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li><i class="{{ 'view.icon.class.uploaded-file'|trans }}"></i> {{ 'uploaded-file-logs.menu'|trans }}</li>
+        <li class="breadcrumb-item"><i class="{{ 'view.icon.class.uploaded-file'|trans }}"></i> {{ 'uploaded-file-logs.menu'|trans }}</li>
     </ol>
 {% endblock %}
 
