--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/form.html.twig
@@ -2,7 +2,7 @@
 {% trans_default_domain 'emsco-twigs' %}
 
 
-{% block breadcrumb_items %}<li>{{ block('title') }}</li>{% endblock breadcrumb_items %}
+{% block breadcrumb_items %}<li class="breadcrumb-item active">{{ block('title') }}</li>{% endblock breadcrumb_items %}
 
 
 {% block body %}
