--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/form.html.twig
@@ -3,8 +3,8 @@
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li><a href="{{ path('ems_wysiwyg_index') }}"><i class="fa fa-language"></i> {{ 'WYSIWYG profiles'|trans }}</a></li>
-		<li>{% block title %}{% endblock %}</li>
+		<li class="breadcrumb-item"><a href="{{ path('ems_wysiwyg_index') }}"><i class="fa fa-language"></i> {{ 'WYSIWYG profiles'|trans }}</a></li>
+		<li class="breadcrumb-item">{% block title %}{% endblock %}</li>
    	</ol>
 {% endblock %}
 
